# converge-app

./: .gitignore  PROJECT_STATE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
app-unpacked/: package.json
app-unpacked/electron/: main.js  preload.js
backend/: package-lock.json  package.json
backend/src/: server.js
backend/src/config/: db.js
backend/src/controllers/: auth.controller.js  chat.controller.js  task.controller.js  workspace.controller.js
backend/src/middleware/: auth.middleware.js
backend/src/models/: Message.js  Task.js  User.js  Workspace.js
backend/src/routes/: auth.routes.js  chat.routes.js  task.routes.js  workspace.routes.js
backend/src/sockets/: workspace.socket.js
electron/: main.js  preload.js
frontend/: package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/components/: ActivityBar.js  Button.js  CallNotification.js  CallView.js  ChatView.js  ContextMenu.js  Editor.js  Modal.js  Sidebar.js  Tabs.js  TaskView.js  Terminal.js  TreeNode.js  VideoView.js
frontend/src/context/: AuthContext.js  AuthContext.jsx
frontend/src/pages/: AuthPage.js  CreateWorkspace.js  Dashboard.js  WorkspaceHome.js
frontend/src/styles/: auth.css  callnotification.css  callview.css  chatview.css  (+5 more)
server/: index.js
server/models/: Workspace.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/: main.js
src/preload/: preload.js
src/renderer/: package-lock.json  package.json
(+16 files in other folders)
