[package]
name = "converge"
version = "1.0.0"
edition = "2021"

[lib]
name = "converge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["wry"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
dirs                = "5"
chrono              = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_40"] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
